<resources>
    <!--Tela Menu-->
    <string name="app_name">SalutApp</string>
    <string name="txt_titulo">BEM VINDO</string>
    <string name="txt_btn_login">Entrar</string>
    <string name="txt_nao_tem_conta">Não tem conta?</string>
    <string name="txt_cadastro">Cadastre-se</string>

    <!--Tela Login-->
    <string name="txt_titulo_login">Seu futuro, nosso desafio</string>
    <string name="txt_email_login">Email</string>
    <string name="txt_senha_login">Senha</string>
    <string name="txt_esqueceu_senha_login">Esqueceu a senha?</string>
    <string name="txt_não_conta_login">Não tem uma conta?</string>

    <!--Tela Cadastro-->
    <string name="txt_cadastro_register">Nova Conta:</string>
    <string name="txt_nome_register">Nome Completo</string>
    <string name="txt_nasc_register">Data de Nascimento</string>
    <string name="txt_sexo_register">Gênero</string>
    <string name="txt_confirma_senha_register">Confirmar Senha</string>
    <string name="txt_btn_cadastro_register">Cadastrar</string>

    <!--Tela Perfil-->
    <string name="txt_titulo_configuration">Configuração</string>
    <string name="txt_altera_nome_config">Altere seu nome</string>
    <string name="txt_altera_email_config">Altere seu e-mail</string>
    <string name="txt_altera_telefone_config">Altere seu telefone</string>
    <string name="txt_senha_atual_config">Digite sua senha atual</string>
    <string name="txt_altera_senha_config">Digite sua nova senha</string>
    <string name="txt_confirma_senha_config">Confirme sua senha</string>
    <string name="txt_btn_altera_config">Alteração Finalizada</string>
    <string name="txt_altera_finaliza_config">Alterar</string>
    <string name="txt_data_nascimento_config">Data de nascimento</string>
    <string name="txt_genero_config">Gênero</string>

    <!--Tela Historico-->
    <string name="txt_titulo_historico">Histórico Médico</string>
    <string name="txt_btn_visualizar">Visualizar Anteriores</string>
    <string name="txt_nome_hospital">Nome Hospital</string>
    <string name="txt_telefone_historico">Telefone</string>
    <string name="txt_pressao_historico">Pressão</string>
    <string name="txt_temperatura_historico">Temperatura</string>

    <!--Tela Agendamento-->
    <string name="txt_data_marcar">16/10/2020</string>
    <string name="txt_btn_marcar">Agendamentos</string>
    <string name="txt_hora_marcar">Hora</string>
    <string name="txt_titulo_marcar">Consultas</string>
    <string name="txt_horario_marcar">12:00</string>
    <string name="txt_especialidade_marcar">Cardiologista Doutror Fernando Av. Paulista</string>

    <!--Tela Emergencia-->
    <string name="txt_dor_cabeça">Dores de Cabeça</string>
    <string name="txt_dor_ocular">Dores Oculares</string>
    <string name="txt_dor_renais">Dores Renais</string>
    <string name="txt_dor_figado">Dores no Fígado</string>
    <string name="txt_dor_pulmao">Dores Pulmonares</string>
    <string name="txt_dor_cardiaca">Problemas Cardíacos</string>
    <string name="txt_dor_ossos">Quebra de Ossos</string>
    <string name="txt_dor_veia">Problemas nas Veias</string>
    <string name="btn_enviar_emergencia">Enviar</string>

    <!--Tela ficha medica-->
    <string name="txt_titulo_ficha">Agendamento</string>
    <string name="txt_peso_ficha">Peso</string>
    <string name="txt_altura_ficha">Altura</string>
    <string name="txt_nome_hosp_ficha">Nome Hospital</string>
    <string name="txt_temp_ficha">Temperatura</string>
    <string name="txt_pressao_art_ficha">Pressão Arterial</string>
    <string name="txt_gestante_ficha">É gestante?</string>
    <string name="txt_ultimo_ciclo_ficha">Último Ciclo</string>
    <string name="txt_outros_sintomas_ficha">Alergias</string>
    <string name="txt_btn_ficha">Enviar</string>
    <string name="txt_mome_hospital">Hospital</string>

    <!--Tela Menu-->
    <string name="txt_emergencia_menu">Emergência</string>
    <string name="txt_ficha_menu">Consultas</string>
    <string name="txt_agendar_menu">Agendar Consulta</string>
    <string name="txt_historico_menu">Histórico Médico</string>
    <string name="txt_mapa_menu">Hospitais Próximos</string>

    <!--Mensagens Toast-->
    <string name="login_error_campo">Preencher campo</string>
    <string name="erro_autentificacao">Falha na autenticação</string>
    <string name="sucesso_autentificacao">Autenticação feita com sucesso</string>
    <string name="cadastro_feito">Cadastro Realizado</string>
    <string name="cadastro_falhou">Erro no cadastro, tente novamente!</string>
    <string name="erro_campo">Senhas não coicidem</string>
    <string name="erro_autentificacao_dados">login ou senha inválidos</string>
    <string name="title_activity_find_location_maps">Map</string>
    <string name="msg_ativar_Checkout">Ativar o botão de alterar</string>
    <string name="msg_voltar_erro">Para voltar a tela de login por favor efetuar logout</string>

    <string name="msg_alterar_sucesso_config">Alteração feita com sucesso</string>
    <string name="msg_alterar_erro_config">Alteração falhou</string>

    <string name="msg_sucesso_ficha">Ficha enviada com sucesso</string>
    <string name="msg_erro_ficha">Erro ao enviar ficha</string>
    <string name="msg_email_emergencia_sucesso">Formulario enviado para o médico com sucesso</string>
    <string name="msg_email_emergencia_erro">Erro no envio do formulario</string>
    <string name="msg_sintoma_emergencia">Sintoma registrado no formulario</string>
</resources>