<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FichaMedica"
    android:background="#D9D9D9">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="236dp"
        android:background="@drawable/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="92dp"
        android:text="Agendamento"
        android:textColor="#D9D9D9"
        android:textSize="30sp"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_foto"
        android:layout_width="195dp"
        android:layout_height="195dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/doctors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="25dp" />

    <EditText
        android:id="@+id/et_peso"
        android:layout_width="198dp"
        android:layout_height="60dp"
        android:layout_marginBottom="365dp"
        android:background="@drawable/bg_txt_height"
        android:text="@string/txt_altura_ficha"
        android:layout_marginLeft="15dp"
        android:paddingLeft="45sp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_foto"
        />


    <EditText
        android:id="@+id/et_altura"
        android:layout_width="198dp"
        android:layout_height="60dp"
        android:layout_marginBottom="408dp"
        android:background="@drawable/bg_txt_password"
        android:hint="@string/txt_peso_ficha"
        android:layout_marginLeft="200dp"
        android:inputType="numberDecimal"
        android:paddingLeft="65dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/et_temperatura"
        android:layout_width="198dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="325dp"
        android:background="@drawable/bg_txt_password"
        android:hint="@string/txt_temp_ficha"
        android:paddingLeft="60sp"
        android:textSize="18sp"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_altura"
        />


    <EditText
        android:id="@+id/et_pressao"
        android:layout_width="198dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="325dp"
        android:background="@drawable/bg_txt_password"
        android:hint="@string/txt_pressao_art_ficha"
        android:inputType="numberDecimal"
        android:paddingLeft="40sp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.963"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_altura"
        />

    <Switch
        android:id="@+id/swAlteracaoFinalizada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:checked="true"
        android:paddingLeft="60dp"
        android:text="@string/txt_gestante_ficha"
        android:textColor="#000"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/et_temperatura"
        />

    <EditText
        android:id="@+id/et_ultCiclo"
        android:layout_width="198dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_txt_password"
        android:hint="@string/txt_ultimo_ciclo_ficha"
        android:inputType="date"
        android:paddingLeft="45dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pressao"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/et_maisInformacoes"
        android:layout_width="325dp"
        android:layout_height="70dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="115dp"
        android:background="@drawable/bg_txt_password"
        android:hint="@string/txt_outros_sintomas_ficha"
        android:paddingLeft="70dp"
        android:textSize="18sp"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pressao"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/shape_login_buttom_custom"
        android:text="@string/txt_btn_ficha"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>