<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FC6963"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivWellcome"
        android:layout_width="310dp"
        android:layout_height="310dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        android:src="@drawable/wellcome_screen"
        />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:lineSpacingExtra="12dp"
        android:text="@string/txt_titulo"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivWellcome"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:text="@string/txt_btn_login"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        android:background="@drawable/shape_login_buttom_custom"
        />
    
    <LinearLayout
        android:id="@+id/llSingup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_nao_tem_conta"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_cadastro"
            android:textSize="18sp"
            android:textColor="@color/blue"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>